--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,25 @@
 *{
     margin: auto;
+    
+}
+body{
+    background-color: #E5E5E5;
+    /*font-family: 'Comfortaa', cursive;
+    font-family: 'Work Sans', sans-serif;*/
 }
 header{
     display: flex;
-    background-color: #023E8A;
+    background-color: #405927;
     width: 100%;
-    height: 57px;
+    height: 2em;
     width: auto;
-    /*position: fixed;*/
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    padding: 1em 0;
 }
-main {
-    background-color: #3C5FA6; /*este es temporal para presentar mañana pero se va cambiar adelante*/
-}
+
 #logoGF{
     height: 40px;
 }
@@ -26,35 +34,60 @@ main {
 #mundo{
     width: 219px;
 }
+
+
+/*Aquí comienza la edición del registro*/
 #form-register{
     margin: auto;
 }
+#title-form{
+    font-family: 'Comfortaa', cursive;
+    font-family: Comfortaa;
+    margin-top: 5em;
+    margin-bottom: 1.5em;
+    color: #0E6359;;
+    font-weight:normal;
+    font-size: 1.3em;
+    /*line-height: 33px;*/
+    text-align: center;
+  
+    /*display: flex;*/
+
+}
+
+.form{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    /*margin-top: 4em;*/
+}
+/*
 #register-form {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
    
-}
-#register-form label h2{
-    color: #fff;
-}
-#title-form{
-    margin: 38px 50px;
-}
+}*/
+
+
+
 #register-form input{
-    width: 288px;
-    height: 37px;
-    background: #E7ECF6;
+    width: 20em;
+    height: 2em;
+    background: rgba(242, 197, 28, 0.6);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
-    margin: 5px 50px 30px 50px;
+    border: none;
+    padding: .5em 2em;
+    margin: 1em 4em;
+    /*margin: 5px 50px 30px 50px;*/
 }
 
 #register-form label{
-    width: 309px;
+    /*width: 309px;
     height: 41px;
-
-    font-family: Varela Round;
+*/
+    font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -65,18 +98,16 @@ main {
 #register-form  button{
     width: 155px;
     height: 37px;
-
-    font-family: Montserrat Alternates;
+    font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
+    /*line-height: 22px;*/
     text-align: center;
-    color: #000000;
-
-    background: #F2B705;
+    color:whitesmoke;
+    background: #0E6359;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
-
-    margin-bottom: 150px; /*este es temporal para presentar mañana pero se va cambiar adelante*/
+    border: none;
+    margin: 2em ;
 }
