--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ header{
     padding: 1em 0;
 }
 main{
-    margin-top: 5em;
+    margin-top: 4em;
 }
 #logoGF{
     height: 40px;
@@ -29,15 +29,79 @@ main{
     height: 37px;
     left: 100%;
 }
-/* .banner{
-    background-image: url(img/backgroud-banner.png);
-    /*background-size: ;*
-} */
-#mundo{
-    width: 219px;
+.banner{
+    background-image: url(img/fondo-verde-este-si\ 2.png);
+    background-size:100% 100%;
+    background-position:center;
+    background-repeat: no-repeat;
+
+    height: 15em;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+} 
+.banner-welcome{
+    font-family: 'Comfortaa', cursive;
+    color: #405927;
+    font-weight: 700;
+    font-size: 1.5em;
+    padding:2em;
+    padding-bottom:0 ;
+    margin-bottom: 0%;
+    text-align: center;
+}
+.btn-login{
+    border: none;
+    background-color:#93BDB8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    color: #000000;
+    font-family: 'Work Sans', sans-serif;
+    padding: 0.4em 1em;
+    font-size: 1.125em;
+    font-weight: 300;
+    font-weight:bold;
+
+}
+.process{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+flex-wrap: wrap;
+justify-content: space-evenly;
+}
+#title-process{
+    font-family: 'Comfortaa', cursive;
+    font-weight: bold;
+    text-align: center;
+    color:#405927;
+    font-size: 1.5em;
+    margin: .7em 0;
+}
+.process-icon{
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 70%;
+    align-content: center;
+
+
+}
+.process-p{
+    font-family: 'Work Sans', sans-serif;
+    font-weight:bold;
+    font-size: 1.2em;
+    width: 50%;
+   padding-left: 1.5em;
 }
 
-
+.process-arrow{
+    margin:.5em;
+  margin-right: 46%;
+    
+}
 /*Aquí comienza la edición del registro*/
 #form-register{
     margin: auto;
@@ -112,4 +176,23 @@ main{
     border-radius: 15px;
     border: none;
     margin: 2em ;
+}
+footer{
+    margin-top: .7em;
+    background-color: #405927;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    font-family: 'Work Sans', sans-serif;
+    color:#E5E5E5;
+    padding-bottom: .7em;
+    position:sticky;
+
+}
+footer img{
+    width: 2em;
+    margin-top: .3em;
+    margin-bottom: .3em;
+
+
 }
