--- a/src/style.css
+++ b/src/style.css
@@ -69,8 +69,8 @@ main{
     display: flex;
     align-items: center;
     flex-direction: column;
-flex-wrap: wrap;
-justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 #title-process{
     font-family: 'Comfortaa', cursive;
@@ -86,8 +86,6 @@ justify-content: space-evenly;
     flex-wrap: wrap;
     width: 70%;
     align-content: center;
-
-
 }
 .process-p{
     font-family: 'Work Sans', sans-serif;
@@ -104,9 +102,12 @@ justify-content: space-evenly;
 }
 /*Aquí comienza la edición del registro*/
 #form-register{
-    margin: auto;
-    width: 40%; /*Esto para despotck*/
+    display: flex !important;
+    flex-wrap: nowrap;
+    flex-basis: 50%; 
+    margin-left: 6em;
 }
+
 #title-form{
     font-family: 'Comfortaa', cursive;
     margin-top: 5em;
@@ -114,27 +115,19 @@ justify-content: space-evenly;
     color: #0E6359;;
     font-weight:normal;
     font-size: 1.3em;
-    /*line-height: 33px;*/
     text-align: center;
-  
-    /*display: flex;*/
-
 }
 
 .form{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    /*margin-top: 4em;*/
 }
-
-/*#register-form {
-position: relative;
-   
-}*/
-
-
-
+#register-form{
+    align-self: flex-start;
+    margin: 0;
+    width: 35%; /*Esto para despotck*/
+}
 #register-form input{
     color:#405927;
     width: 20em;
@@ -145,14 +138,10 @@ position: relative;
     border: none;
     padding: .5em 2em;
     margin: 1em 4em;
-   
-    /*margin: 5px 50px 30px 50px;*/
 }
 
 #register-form label{
-    /*width: 309px;
-    height: 41px;
-*/
+  
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -201,6 +190,4 @@ footer img{
     width: 2em;
     margin-top: .3em;
     margin-bottom: .3em;
-
-
 }
