--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,9 @@
     float: left;
     margin-left: 3vw;
   }
+  header ul li{
+    display: inline-block;
+  }
   #user-icon {
     height: 9vmin;
     float: right;
@@ -92,7 +95,6 @@
     width: 60vmin;
   }
   
-  
   /*Aquí comienza la edición del registro*/
   #register-page{
     display: flex;
@@ -143,12 +145,12 @@
     color: #000000;
   }
 button {
-    width: 155px;
-    height: 37px;
+    width: 15vmax;
+    height: 4vmax;
     font-family: "Work Sans", sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 3vh;
     /*line-height: 22px;*/
     text-align: center;
     color: whitesmoke;
