--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
     background-color: #405927;
     width: 100%;
-    height: 2em;
+    height: 4vmax;
     width: auto;
     position: fixed;
     left: 0;
@@ -26,9 +26,14 @@
     height: 9vmin;
     float: left;
     margin-left: 3vw;
+    margin-top: 0;
   }
   header ul li{
     display: inline-block;
+  }
+  .btn-routing{
+    margin-top: 0 !important;
+    padding-top: 0 !important;
   }
   #user-icon {
     height: 9vmin;
