--- a/src/style.css
+++ b/src/style.css
@@ -195,4 +195,9 @@ button {
     margin-top: 0.3em;
     margin-bottom: 0.3em;
   }
-  
+
+@media only screen and ( min-width: 1026px ){
+    header{
+      background-color: #000000;
+    }
+}
