--- a/src/style.css
+++ b/src/style.css
@@ -5,40 +5,51 @@
     background-color: #e5e5e5;
     /*font-family: 'Comfortaa', cursive;
       font-family: 'Work Sans', sans-serif;*/
+      min-height: calc(20vh - 100px - 300px);
+     
   }
+ 
+  
   header {
-    display: flex;
+  
     flex-wrap: wrap;
     background-color: #405927;
     width: 100%;
-    height: 4vmax;
+    height: 2em;
     width: auto;
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
     padding: 1.3em 0;
+    margin-bottom: 0%;
   }
   main {
     margin-top: 4em;
   }
   #logoGF {
-    height: 9vmin;
+    height: 6vmin;
     float: left;
     margin-left: 3vw;
     margin-top: 0;
+  }
+  header ul{
+    float: right;
   }
   header ul li{
     display: inline-block;
   }
   .btn-routing{
-    margin-top: 0 !important;
+    margin-top: 1.5vh !important;
     padding-top: 0 !important;
   }
-  #user-icon {
+  /*#users-icon {
     height: 9vmin;
     float: right;
     margin-right: 8vw;
+  }*/
+  .menu-icon{
+    display: block;
   }
   .banner {
     background-image: url(img/fondo-verde-este-si\ 2.png);
@@ -51,6 +62,9 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-top: -.5em;
+   
+
   }
   /*Frase de bienvenida del banner*/
   .banner-welcome {
@@ -60,7 +74,8 @@
     font-size: 7vmin;
     padding: 5vmin;
     padding-bottom: 0;
-    margin-bottom: 0%;
+    margin-bottom: 2vmin;
+    margin-top: 2vmin;
     text-align: center;
   }
   .btns-login {
@@ -98,14 +113,18 @@
   /*id de la imagen del movil*/
   #process-movil {
     width: 60vmin;
+   
   }
-  
+  #process-desktop{
+    display: none;
+  }
   /*Aquí comienza la edición del registro*/
   #register-page{
     display: flex;
     flex-wrap: nowrap;
     flex-basis: 35%;
     margin-left: 6em;
+    margin-top:15vh;
   }
   .titles {
     font-family: "Comfortaa", cursive;
@@ -151,7 +170,7 @@
   }
 button {
     width: 15vmax;
-    height: 4vmax;
+    height: 2.5vmax;
     font-family: "Work Sans", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -180,7 +199,8 @@ button {
   }
   
   footer {
-    margin-top: 80%;
+    margin-top: 13%;
+    width: 100%;
     background-color: #405927;
     display: flex;
     text-align: center;
@@ -188,8 +208,11 @@ button {
     font-family: "Work Sans", sans-serif;
     color: #e5e5e5;
     padding-bottom: 0.7em;
-    position: sticky;
+  position: sticky;
+ 
+
   }
+
   footer img {
     width: 8vmin;
     margin-top: 0.3em;
@@ -197,7 +220,22 @@ button {
   }
 
 @media only screen and ( min-width: 1026px ){
-    header{
+    
+  
+  header{
       background-color: #000000;
+      height: 5em;
+    }
+    .menu-icon{
+      display: none;
+    }
+    #process-desktop{
+      display:block;
+    }
+    #process-movil{
+      display:none;
+    }
+    #madre-tierra{
+     display:block;
     }
 }
