--- a/src/style.css
+++ b/src/style.css
@@ -33,22 +33,15 @@
   }
  
   header ul{
-    float: right;
-    list-style: none;
-    display: none;
     
-   
+    display: none;
   }
   header ul.show{
     display: block;
     background-color: #405927;
-   
-  
-    height: 10vmin;
-   /* margin-left: 100%;*/
+    height: 30vmin;
+    position:relative;
     transition: ease-in-out 0.8s linear;
-    align-content: space-between;
-    
   }
   
   header ul li{
