--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,6 @@ body {
   /*font-family: 'Comfortaa', cursive;
       font-family: 'Work Sans', sans-serif;*/
 }
-
 header {
   flex-wrap: wrap;
   background-color: #405927;
@@ -23,25 +22,27 @@ header {
   justify-content: space-around;
   align-items: center;
 }
-
 #logoGF {
   height: 6vmin;
   float: left;
   margin-left: 3vw;
   margin-top: 0;
 }
-
 header ul {
   display: none;
 }
 .div-navegation{
   width:100%;
+ 
+}
+.div-navegation button{
+  margin: 4vmin;
 }
 header ul.show {
   display: block;
   background-color: #405927;
   width:100%;
-  height: 10vmin;
+  height: 15vmin;
   /* margin-left: 100%;*/
   transition: ease-in-out 0.8s linear;
   align-content: space-between;
@@ -54,14 +55,13 @@ header ul li {
   margin-top: 1.5vh !important;
   padding-top: 0 !important;
 }
-
 .menu-icon {
   display: block;
   cursor: pointer;
 }
 #img-users {
   width: 9vw;
-  filter: drop-shadow(0 0.5em .4em whitesmoke);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.50));
 }
 main {
   margin-top: 4em;
@@ -181,8 +181,8 @@ main {
   color: #000000;
 }
 button {
-  width: 15vmax;
-  height: 2.5vmax;
+  width: 18vmax;
+  height: 3.7vmax;
   font-family: "Work Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -236,14 +236,20 @@ footer img {
 
 @media only screen and (min-width: 1026px) {
   header {
-    background-color: #000000;
-    height: 5em;
+    height: 3em;
   }
   header ul {
     display: block;
   }
+  #logoGF{
+    margin-bottom: 1.8em;
+  }
   .menu-icon {
     display: none;
+  }
+  button {
+    width: 15vmax;
+    height: 2.5vmax;
   }
   #btn-register-movil{
     display: none;
