--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 * {
   margin: auto;
 }
+
 body {
   background-color: #e5e5e5;
   /*font-family: 'Comfortaa', cursive;
@@ -160,6 +161,7 @@ main {
   /*justify-items: center;*/
   margin: auto;
   margin-left: 9vw;
+  margin-right: 0;
   /*width: 35%; Esto para despotck*/
 }
 .form-inicial input {
@@ -256,6 +258,37 @@ footer img {
   width: 8vmin;
   margin-top: 0.3em;
   margin-bottom: 0.3em;
+}
+.show-passwords{
+  display: inline-block;
+  /*width: 20em;
+  height: 3em;*/
+  background: rgba(242, 197, 28, 0.6);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  border: none;
+  padding: 0.45em 1.3em;
+  margin: 1vh 6vw;
+}
+#user-password, #confirm-password{
+  margin-right: 0;
+  color: #405927;
+  width: 15em;
+  height: 2em;
+  background: transparent;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+
+}
+#hide1,#hide2{
+ margin-right:0vw;
+ padding:0vmax;
+ /*background-color: rgba(242, 197, 28, 0.6);*/
+ border-radius: 50%;
+ cursor:pointer;
 }
 
 @media only screen and (min-width: 1026px) {
