--- a/src/style.css
+++ b/src/style.css
@@ -103,20 +103,6 @@ main {
   margin-top: 2vmin;
   text-align: center;
 }
-.btns-login {
-  border: none;
-  margin-left:1em !important;
-  background-color: #93bdb8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
-  color: #272829;
-  font-family: "Work Sans", sans-serif;
-  padding: 0.8vmin 1vmin;
-  font-size: 3vmax;
-  font-weight: 100;
-  font-weight: normal;
-  
-}
 /*Sección de la imagen del proceso con titulo*/
 .process {
   display: flex;
@@ -178,7 +164,7 @@ main {
   margin-right: 0;
   /*width: 35%; Esto para despotck*/
 }
-.form-inicial input, select {
+.form-inicial input, select, textarea {
   color: #405927;
   width: 20em;
   height: 3em;
@@ -200,15 +186,9 @@ main {
 .form-inicial button {
   margin: 1vh 25vw;
 }
-.form-inicial textarea {
-  color: #405927;
-  background: rgba(242, 197, 28, 0.6);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
-  border: none;
-  padding: 0.5em 2em;
-  margin: 1vh 6vw;
-}
+ .form-inicial textarea {
+  height: 13.5em;
+} 
 .blue {
   background: #93bdb8;
   color: #000000;
@@ -242,7 +222,7 @@ main {
 #heart {
   display: none;
 }
-.leaf-img .cloud-bg{
+.leaf-img , .cloud-bg{
   position: absolute;
   z-index: -1;
   float: left;
@@ -297,12 +277,13 @@ main {
   font-weight: normal;
   font-size: 1.3em;
 }
-#btn-exit{
+#btn-exit, #btn-exit-wall{
   display:none;
+  margin-left: 20vmax;
+  margin-top: 0;
 }
 #logout-movil{
   display: block;
-  width: 9vw;
 }
 #wall{
   display: flex;
@@ -431,7 +412,7 @@ footer img {
   #root {
     min-height: calc(80vh - 80px);
   }
-  #btn-exit{
+  #btn-exit, #btn-exit-wall{
     display:block;
   }
   #logout-movil{
@@ -439,6 +420,8 @@ footer img {
   }
   #nubes-desktop{
     display: block;
+    width: 50vmax;
+    margin-top: 1vmax;
   }
   #nubes-movil{
     display: none;
