--- a/src/style.css
+++ b/src/style.css
@@ -285,28 +285,34 @@ main {
 #logout-movil{
   display: block;
 }
+#btn-post{
+  font-size: 3.7vw;
+}
 #wall{
   display: flex;
   flex-flow: row wrap;
   flex-direction: column;
   align-items: center;
+  margin-top: 8vh;
 }
 #welcome-wall{
-  margin-top: 12vh;
+  margin-top: 9vh;
+  margin-bottom:2vh;
   display: flex;
   /* justify-content: space-around; */
 }
 #wall-image{
   height: 9vmax;
-  margin-right: 15vmax;
+  margin-right: .5vmax;
+  margin-left:2vmax;
 }
 #message-welcome{
   font-family: "Work Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 25px;
-  line-height: 29px;
+  font-size: 5vw;
   color: #000000;
+  text-align: center;
 }
 #post{
   margin-top: 10vh;
@@ -321,6 +327,12 @@ main {
   background: #D9D5A0;
   color: #000000;
 }
+.post-container{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-content: center;
+}
 .div-post{
   /*display: flex;*/
 
@@ -329,9 +341,9 @@ main {
   box-sizing: border-box;
   border-radius: 15px;
   margin-bottom: 3vmax;
-  padding:2vmax;
+  padding:1vmax;
   font-family: "Work Sans", sans-serif;
-  width: 90%;
+  width: 85vmin;
 }
 .div-post h3{
 font-family: Comfortaa;
@@ -339,6 +351,13 @@ font-style: normal;
 font-weight: 300;
 font-size: 2vmax;
 color: #0E6359;
+}
+.div-editPost{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-end;
+  align-items:flex-end;
+  margin-bottom: 0;
 }
 .btn-wall{
   color: #44464A;
@@ -349,7 +368,11 @@ color: #0E6359;
   border-radius: 15px;
   width: 25%;
   margin: .5em;
+  font-size: 3.5vw;
   
+}
+.like-counter{
+  margin-right: 10vw;
 }
 .like{
 width: 8vmin;
@@ -462,4 +485,17 @@ footer img {
   .like{
     width: 4vmin;
     }
+  .btn-wall{
+    font-size: 1vw;
+  }
+  #wall-image{
+    margin-right: 5vmax;
+    margin-left:2vmax;
+  }
+  #message-welcome{
+    font-size: 3vw;
+  }
+  #btn-post{
+    font-size: 1.4vw;
+  }
 }
