--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@ header {
 }
 header ul {
   display: none;
+  margin-left: -1.5em;
 }
 header ul.show {
   display: block;
@@ -46,6 +47,7 @@ header ul.show {
   height: 15vmin;
   transition: ease-in-out 0.8s linear;
   align-content: space-between;
+  margin-left: -1.5em;
 }
 header ul li {
   display: inline-block;
@@ -335,7 +337,6 @@ main {
 }
 .div-post{
   /*display: flex;*/
-
   background: #FFFFFF;
   border: 3px solid #0E6359;
   box-sizing: border-box;
@@ -344,6 +345,7 @@ main {
   padding:1vmax;
   font-family: "Work Sans", sans-serif;
   width: 85vmin;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .div-post h3{
 font-family: Comfortaa;
