--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300&display=swap');
 * {
   margin: auto;
 }
@@ -342,20 +343,31 @@ main {
   box-sizing: border-box;
   border-radius: 15px;
   margin-bottom: 3vmax;
-  padding:1vmax;
+  padding: 4vmin;
   font-family: "Work Sans", sans-serif;
   width: 85vmin;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .div-post h3{
+  text-transform: uppercase;
   font-family: Comfortaa;
   font-style: normal;
-  font-weight: 300;
-  font-size: 3vh;
+  font-weight: 500;
+  font-size: 2.5vh;
   color: #0E6359;
+  margin-bottom: 3vmin;
+}
+.div-post h4{
+  font-family: "Comfortaa";
+  font-style: normal;
+  font-weight: 600;
+  color: #0E6359;
+  margin-bottom: 2vmin;
+  margin-top: 2vmin;
 }
 .div-post p{
-  font-size: 2.8vh;
+  font-size: 3.2vh;
+  font-weight: 500;  
 }
 .div-editPost{
   display: flex;
@@ -365,7 +377,7 @@ main {
   margin-bottom: 0;
 }
 .btn-wall{
-  color: #44464A;
+  color: #0e6359;
   background: #E7ECF6;
   border: 1.5px solid #0E6359;
   box-sizing: border-box;
@@ -374,10 +386,10 @@ main {
   width: 25%;
   margin: .5em;
   font-size: 3.5vw;
-  
+  font-weight: 600;
 }
 .like-counter{
-  margin-right: 10vw;
+  margin-right: 6vw;
 }
 .like{
 width: 8vmin;
@@ -487,12 +499,25 @@ footer img {
   #nubes-movil{
     display: none;
   }
+  .div-post{
+    width: 65vmax;
+  }
+  .div-post h3{
+    margin-bottom: 0;
+  }
+  .div-post h4{
+    margin-top: 0;
+  }
   .date-public{
-    margin-left: 60% ;
+    margin-left: 78% ;
   }
   .like{
-    width: 4vmin;
+    margin-left: 0;
+    width: 6vmin;
     }
+  .like-counter{
+    margin-right: 20vw;
+  }
   .btn-wall{
     font-size: 1vw;
   }
