--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ header {
 }
 header ul {
   display: none;
-  margin-left: -1.5em;
+  
 }
 header ul.show {
   display: block;
@@ -424,8 +424,32 @@ footer img {
   margin-bottom: 0.3em;
 }
 @media only screen and (min-width: 765px ) {
-
-  
+  #img-users {
+    width: 9.1vmin; 
+  }
+  #process-movil{
+    width: 50vmin;
+  }
+  header ul.show {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
+  #btn-post {
+    width:30vmax;
+  }
+  #btn-return{
+    width: 30vmax;
+  }
+  .like-counter {
+    font-size: 2.5vmin;}
+  .form-inicial{
+      margin-left: 10vw;
+    }
+  .form-inicial textarea,select {
+    width: 24em;
+    
+  }
 }
 
 @media only screen and (min-width: 1500px) {
