--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body {
   /*font-family: 'Comfortaa', cursive;
       font-family: 'Work Sans', sans-serif;*/
 }
+/*Comienza la edición en celular*/
 button {
   width: 21vmax;
   height: 3.7vmax;
@@ -39,11 +40,9 @@ header {
   right: 0;
   padding: 1.3em 0;
   margin-bottom: 0%;
-  
 }
 header ul {
   display: none;
-  
 }
 header ul.show {
   display: block;
@@ -56,8 +55,6 @@ header ul.show {
   transition: ease-in-out 0.8s linear;
   margin-left: -10vmin;
   padding-left:10vmin;
-  
-  
 }
 header ul li {
   display: inline-block;
@@ -76,7 +73,6 @@ header ul li {
   width: 30vw;
   font-size:3.5vmin;
 }
-/*Botones contenidos dentro de img-icon*/
 .btn-routing {
   margin-top: 1.5vh !important;
   padding-top: 0 !important;
@@ -92,6 +88,7 @@ header ul li {
 main {
   margin-top: 3em;
 }
+/*Edición de banner*/
 .banner {
   background-image: url(img/fondo-verde-este-si\ 2.png);
   background-size: 100% 100%;
@@ -117,7 +114,7 @@ main {
   margin-top: 2vmin;
   text-align: center;
 }
-/*Sección de la imagen del proceso con titulo*/
+/*Sección de la imagen ¿Cómo funciona? movil*/
 .process {
   display: flex;
   align-items: center;
@@ -132,12 +129,11 @@ main {
   color: #405927;
   font-size: 6vmin;
   margin: 4vmin 0vmin;
-} /*Sección de la imagen del proceso*/
+} 
 .process-img {
   display: flex;
   align-content: center;
 }
-/*id de la imagen del movil*/
 #process-movil {
   width: 60vmin;
   margin-bottom: 2vh;
@@ -146,9 +142,8 @@ main {
   display: none;
   padding-bottom: 9vmin;
 }
-/*Aquí comienza la edición del registro*/
-#register-page,
-#login-page {
+/*Aquí comienza la edición del registro - login*/
+#register-page,#login-page {
   display: flex;
   flex-wrap: nowrap;
   flex-basis: 35%;
@@ -167,6 +162,7 @@ main {
 }
 #form-post{
   margin-top:20vmin !important;
+  margin-left: 25vmin;
 }
 .form-inicial {
   /*align-self: flex-start;*/
@@ -182,8 +178,8 @@ main {
 }
 .form-inicial input, select, textarea {
   color: #405927;
-  width: 20em;
-  height: 3em;
+  width: 16em;
+  height: 2.1em;
   background: rgba(242, 197, 28, 0.6);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -249,8 +245,6 @@ main {
 }
 .show-passwords{
   display: inline-block;
-  /*width: 20em;
-  height: 3em;*/
   background: rgba(242, 197, 28, 0.6);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -276,13 +270,11 @@ main {
 }
 #hide1,#hide2, #hide3{
  display:none;
- /*margin-top: .8vh ;*/
  margin:.8vh 0 0 0 !important;
  padding:0;
  cursor:pointer;
 }
 #show1 , #show2, #show3{
-  /*margin-top: .8vh ;*/
   margin:.8vh 0 0 0 !important;
   padding:0;
   cursor:pointer;
@@ -305,6 +297,7 @@ main {
   width:35vmin;
   font-size: 3vmin;
 }
+/*Comienza la edición del muro - perfil*/
 #wall, #profile{
   display: flex;
   flex-flow: row wrap;
@@ -316,7 +309,6 @@ main {
   margin-top: 9vh;
   margin-bottom:2vh;
   display: flex;
-  /* justify-content: space-around; */
 }
 #welcome-profile {
   margin-top: 2vh;
@@ -337,7 +329,6 @@ main {
   width: 15vmax;
   margin-bottom: 4vmin;
 }
-
 #message-welcome, #mail-profile{
   font-family: "Work Sans", sans-serif;
   font-style: normal;
@@ -347,6 +338,7 @@ main {
   text-align: center;
  padding-right: 5vmin;
 }
+/*Comienza la edición del post*/
 #post{
   margin-top: 10vh;
 }
@@ -423,6 +415,21 @@ main {
 .btn-wall-movil{
   width: 9vmin;
 }
+.btns-post{
+  display: flex;
+  flex-direction: row;
+  width: 95%;
+  margin: 0;
+  align-items: center;
+  justify-content: space-around;
+}
+#btn-return, #btn-create-post, #btn-return-edit, #btn-update{
+  width: 23vmin;
+  font-size:3vmin;
+  margin-top: 5vmin;
+  padding: 0;
+}
+/*Comienza edición de like*/
 .like-counter{
   margin-right: 10vw;
   margin-left:0;
@@ -434,6 +441,7 @@ margin-right: 1vw;
 .me-encorazona{
   font-weight: bold;
 }
+/*Comienza edición de pie de página*/
 footer {
   margin-top: 0%;
   width: auto;
@@ -451,20 +459,7 @@ footer img {
   margin-top: 0.3em;
   margin-bottom: 0.3em;
 }
-.btns-post{
-  display: flex;
-  flex-direction: row;
-  width: 95%;
-  margin: 0;
-  align-items: center;
-  justify-content: space-around;
-}
-#btn-return, #btn-create-post, #btn-return-edit, #btn-update{
-  width: 23vmin;
-  font-size:3vmin;
-  margin-top: 5vmin;
-  padding: 0;
-}
+/*Comienza la edición para IPAD / TABLET*/
 @media only screen and (min-width: 768px ) {
   #img-users {
     width: 9.1vmin; 
@@ -480,17 +475,17 @@ footer img {
   .date-public{
     margin-left:60%;
   }
-  
   .like-counter {
-    font-size: 2.5vmin;}
-
+    font-size: 2.5vmin;
+  }
+ /*Formularios*/
   .form-inicial{
       margin-left: 8vw;
     }
   .form-inicial textarea,select {
     width: 24em;
-    
   }
+/*Botones*/
   .btns-post{
     display: flex;
     flex-direction: row;
@@ -498,7 +493,6 @@ footer img {
     margin: 0;
     align-items: center;
     justify-content: space-around;
-    
   }
   #btn-return, #btn-create-post, #btn-return-edit, #btn-update{
     width: 22.5vmin;
@@ -507,9 +501,8 @@ footer img {
     margin-top: 5vmin;
     padding: 0;
   }
- 
 }
-
+/*Comienza la edición para DESKTOP / LAPTOP */
 @media only screen and (min-width: 1024px) {
   header {
     height: 3em;
@@ -552,8 +545,7 @@ footer img {
   main {
     margin-top: 5.5em;
   }
-  #register-page,
-  #login-page {
+  #register-page,#login-page {
     margin-left: 3em;
   }
   #btn-register-movil {
@@ -564,7 +556,6 @@ footer img {
     padding-top: 2vmax;
     margin-right: 14vw;
     margin-left: 0;
-
   }
   .leaf-img {
     width: 45vw;
@@ -576,7 +567,6 @@ footer img {
  font-size:2vmin;
  height:3.5vmin;
   }
-
   #process-desktop {
     display: block;
     width:97%;
@@ -597,7 +587,6 @@ footer img {
   #heart-movil {
     display: none;
   }
-  
   #google-icon {
     width: 2.5vmin;
     height: 2.5vmin;
