--- a/src/style.css
+++ b/src/style.css
@@ -167,6 +167,7 @@ main {
 }
 #form-post{
   margin-top:20vmin !important;
+  margin-left:26vmin;
 }
 .form-inicial {
   /*align-self: flex-start;*/
@@ -182,8 +183,8 @@ main {
 }
 .form-inicial input, select, textarea {
   color: #405927;
-  width: 20em;
-  height: 3em;
+  width: 16em;
+  height: 2.1em;
   background: rgba(242, 197, 28, 0.6);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -255,7 +256,7 @@ main {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
   border: none;
-  padding: 0.45em 2em;
+  padding: .45em 2em;
   margin: 1vh 6vw;
 }
 #user-password, #confirm-password,#login-password{
